--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "@babel/helper-compilation-targets": "^7.10.4",
-    "babel": "^7.8.0",
+    "babel": "^6.23.0",
     "babel-plugin-styled-components": "^1.10.6",
     "darkmode-js": "^1.5.4",
     "gatsby": "^2.18.21",
@@ -80,7 +80,7 @@
     "fix-semi": "eslint --quiet --ignore-pattern node_modules --ignore-pattern public --parser babel-eslint --no-eslintrc --rule '{\"semi\": [2, \"never\"], \"no-extra-semi\": [2]}' --fix gatsby-node.js"
   },
   "engines": {
-    "node": ">=10.0.0",
+    "node": "<=12.16.3",
     "npm": ">=6.0.0"
   }
 }
